# cicd-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
cicd/: build.sh  build_image.sh  build_local.sh  build_stage.sh  deploy_image.sh  deploy_local.sh
